--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 		fr : { // Changé la clé 'en' à 'fr' pour l'affichage
 			title : 'Assistant Intelligent' , // Nouveau titre
 			subtitle : "Disponible 24H/7" , // Nouveau sous-titre
-			footer : 'Propulsé par Stay' , // Ajout d'un pied de page optionnel
+			footer : 'Propulsé par Go Studio' , // Ajout d'un pied de page optionnel
 			getStarted : 'Nouvelle conversation' , 
 			inputPlaceholder : 'Tapez votre question ici...' , // Texte ajusté
 		} , 
